# text-var

./: .gitignore  README.md  __init__.py  api_server.py  benchmark_eval.py  checkpoint.py  config.py  full_pipeline.py  generator.py  loss.py  main.py  model.py  pipeline.py  prepare_dataset.py  pyproject.toml  requirements.txt  rewrite_cache_with_vqvae.py  sample.py  serve_stdin.py  test_checkpoint.py  test_generator_eos.py  test_generator_kv_ring_buffer.py  test_loss.py  test_model.py  test_monitoring.py  test_pipeline.py  test_rewrite_cache_with_vqvae.py  test_stateful_context.py  test_vqvae_padding.py  token_cache.py  train.py  train_vqvae.py  vqvae.py
config/: train.json
configs/: data_config.json  sample.json  train.json  vqvae_train.json
scripts/: api.py  benchmark_eval.py  check_vqvae.py  count_tokens.py  eval_vqvae.py  fetch_dataset.py  migrate_checkpoint.py  prepare_dataset.py  rewrite_cache_with_vqvae.py  train_tokenizer.py  train_var.py  train_vqvae.py
src/: __init__.py
src/api/: cli.py  engine.py  server.py
src/core/: __init__.py  checkpoint.py  executor.py  optimization.py  pipeline.py  training_logger.py
src/data/: token_cache.py
src/data/utils/: prepare_dataset.py  rewrite_cache_with_vqvae.py
src/tokenizer/: __init__.py  trainer.py
src/var/: benchmark_eval.py  checkpoint.py  config.py  fp8.py  generator.py  loss.py  model.py  turboquant_math.py  turboquant_triton.py
src/var/training/: cli.py  config.py  main.py
src/vqvae/: checkpoint.py  cnn_blocks.py  config.py  ema_ops.py  infer_cli.py  loss.py  model.py  sdpa_blocks.py
src/vqvae/training/: cli.py  config.py  main.py
tests/: test_api_engine.py  test_api_server.py  test_benchmark_eval.py  test_checkpoint.py  test_generator_eos.py  test_generator_kv_ring_buffer.py  test_loss.py  test_model.py  test_monitoring.py  test_pipeline.py  test_rewrite_cache_with_vqvae.py  test_stateful_context.py  test_thermodynamic.py  test_train_cfg.py  test_training_logger.py  test_turboquant_math.py  test_turboquant_triton.py  test_vqvae_config.py  test_vqvae_ema_ops.py  test_vqvae_generation.py  test_vqvae_gradient_accum.py  test_vqvae_infer_cli.py  test_vqvae_padding.py  test_vqvae_quantizer_distances.py  test_vqvae_sdpa_encoder.py  test_vqvae_training_runtime_options.py
