[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-var"
version = "0.2.0"
description = "Structured multiscale VAR text generation package"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "text-var contributors" }]
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "tqdm>=4.66",
  "tensorboard>=2.14",
  "transformers>=4.44",
  "fastapi>=0.112",
  "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
