[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-var"
version = "0.2.0"
description = "Structured multiscale VAR text generation package"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "text-var contributors" }]
dependencies = [
  "torch>=2.4",
  "numpy>=1.24",
  "tqdm>=4.66",
  "tensorboard>=2.14",
  "transformers>=4.44",
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "tokenizers>=0.19",
  "safetensors>=0.4",
  "rich>=13.0",
  "vector-quantize-pytorch>=1.14",
]

[project.optional-dependencies]
accelerate = [
  "bitsandbytes>=0.43; platform_system == 'Linux'",
  "flash-attn>=2.5; platform_system == 'Linux'",
]
train = [
  "wandb>=0.15",
]
data = [
  "pyarrow>=14.0",
  # "cudf" # Install via RAPIDS for GPU accelerated JSONL reading
]
test = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
